--- a/src/App.scss
+++ b/src/App.scss
@@ -15,8 +15,15 @@ ul
 {
   list-style:none;
   display: flex;
-}
-li
-{
-  margin: 10px;
+
+  li
+  {
+    margin: 10px;
+
+    a
+    {
+      text-decoration: none;
+      color: aqua;
+    }
+  }
 }
